[patch_cves] feat: applied updates